--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@sveltejs/adapter-netlify": "^1.0.0-next.0",
     "@tryghost/content-api": "^1.5.10"
   }
 }
